# platooning-system-interface

./: README.md  diagrams.drawio
C_Platooning/: Platooning.h  main.c
Slave/: Platooning  Platooning.cbp  Platooning.h  main  main.c  my_program
code/Master/: CMakeLists.txt  commands.txt  main.cu
code/Server/: CMakeLists.txt  README.md  commands.txt  main.cpp  pom.xml
code/Server/common/: point.cpp  point.h
code/Server/common/abstract/: abstractLogger.cpp  abstractLogger.h
code/Server/common/masterInterface/: masterInterface.cpp  masterInterface.h
code/Server/common/point/: point.cpp  point.h
code/Server/common/server/: server.cpp  server.h
code/Server/common/slaveInterface/: slaveInterface.cpp  slaveInterface.h
code/Server/common/trip/: trip.cpp  trip.h
code/Server/common/util/: utils.cpp  utils.h
code/Server/common/vehicles/: masterVechicle.h  masterVehicle.cpp  slaveVehicle.cpp  slaveVehicle.h  vehicle.cpp  vehicle.h
code/Server/src/main/java/: EndpointGenerateID.java  Main.java
code/Server/src/main/java/data/: DataStore.java
code/Server/src/main/java/data/type/: Location.java  Trip.java
code/Server/src/main/java/endpoint/: AbstractEndpoint.java  EndpointCreateTrip.java  EndpointEndTrip.java  EndpointGenerateID.java  EndpointGetAllMasters.java  EndpointGetMasterPath.java  EndpointLinkToTrip.java  EndpointUpdateMasterLocation.java  LinkToTrip.java
code/Server/src/main/java/endpoint/abstractEndpoint/: AbstractEndpoint.java
code/Server/src/main/java/services/: Services.java
code/Server/src/main/java/socket/: ClientSocketHandler.java  SocketServer.java
code/Server/src/test/java/: TestApi.java
code/Slave/: Platooning.h  main (3)  main (3).c  main.c  my_program (4)
code/java/: Main.java  MasterVehicle.java  Server.java  SlaveVehicle.java
